LUGG-1032 Stop overlays overflowing the Link Block

--- a/css/luggage_bean.css
+++ b/css/luggage_bean.css
@@ -4,6 +4,7 @@
 
 .link-block a {
   display: block;
+  position: relative;
   color: #ffffff;
   text-decoration: none;
   border-radius: 3px;
